<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:paddingLeft="5dip" android:paddingRight="5dip"
	android:scrollbars="vertical">

	<LinearLayout android:id="@+id/layout"
		android:layout_width="fill_parent" android:layout_height="wrap_content">


		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="5sp">


		

			<TextView android:id="@+id/schedule_contents_label"
				android:gravity="left" android:text="@string/schedule_contents_viewer"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<TextView android:id="@+id/schedule_contents"
				android:maxLines="10" android:scrollbars="vertical"
				android:editable="false" android:layout_toRightOf="@id/schedule_contents_label"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />




			<TextView android:id="@+id/blank_line1" android:gravity="left"
				android:layout_below="@id/schedule_contents" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView android:id="@+id/schedule_repeat_label"
				android:gravity="left" android:text="@string/schedule_repeat_viewer"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_below="@id/blank_line1" android:textColor="@color/alarm_infocolor" />
			<TextView android:id="@+id/schedule_repeat" android:gravity="left"
				android:text="@string/schedule_repeat" android:layout_toRightOf="@id/schedule_repeat_label"
				android:layout_below="@id/blank_line1" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView android:id="@+id/blank_line2" android:gravity="left"
				android:layout_below="@id/schedule_repeat" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView android:id="@+id/specialday_displayyn_label"
				android:gravity="left" android:text="@string/dday_displayyn_viewer"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_below="@id/blank_line2" android:textColor="@color/dday_infocolor" />
			<TextView android:id="@+id/specialday_displayyn"
				android:gravity="left" android:layout_toRightOf="@id/specialday_displayyn_label"
				android:layout_below="@id/blank_line2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView android:id="@+id/blank_line3" android:gravity="left"
				android:layout_below="@id/specialday_displayyn"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_below="@id/blank_line3">

				<TableRow android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:gravity="center">

					<Button android:text="@string/btn_ok" android:id="@+id/btn_ok"
						android:layout_width="100dip" android:layout_height="wrap_content"
						style="?android:attr/buttonStyleSmall" />
					<Button android:text="@string/btn_editalarm" android:id="@+id/btn_editalarm"
						android:layout_width="100dip" android:layout_height="wrap_content"
						style="?android:attr/buttonStyleSmall" />
				</TableRow>

			</TableLayout>
		</RelativeLayout>

	</LinearLayout>
</ScrollView>

